--- a/src/2-form.html
+++ b/src/2-form.html
@@ -13,6 +13,19 @@
         <a class="back-link" href="./index.html">Go back</a>
         <h1 class="main-title">Form</h1>
       </div>
+      <form class="feedback-form" autocomplete="off">
+        <div class="form-field">
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" autofocus />
+        </div>
+
+        <div class="form-field">
+          <label for="message">Message</label>
+          <textarea name="message" id="message" rows="8"></textarea>
+        </div>
+
+        <button type="submit">Submit</button>
+      </form>
     </main>
     <script type="module" src="./js/2-form.js"></script>
   </body>
