--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,10 @@
         </nav>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="container">
+        <ul class="gallery"></ul>
+      </div>
+    </main>
   </body>
 </html>
